# ShopWire

./: .env.example  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  render.yaml
contracts/: search.proto
docs/: openapi.yaml
migrations/: 0001_down.sql  0001_init.sql  0002_seed_products.sql
src/: app.rs  cache.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs  state.rs
tests/: api_smoke.rs
