[package]
name = "shopwire"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
